--- a/async/future-promise/typescript/package.json
+++ b/async/future-promise/typescript/package.json
@@ -10,7 +10,7 @@
     "build-watch": "tsc -w",
     "rebuild": "npm run clean && npm run lint && npm run build",
     "dev": "npm run clean && npm run lint && npm run build && node ./dist/index.js",
-    "start": "node ./dist/index.js"
+    "prod": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "Alan Uthoff",
