--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ async/future-promise/typescript/.idea/
 package-lock.json
 async/future-promise/c++/.idea/
 async/future-promise/c++/cmake-build-debug/
+xcuserdata
+async/future-promise/objective-c/objective-c-future-promises/objective-c-future-promises.xcodeproj/xcuserdata/
