Cleaned Up Ruby Code

--- a/async/future-promise/ruby/GemFile
+++ b/async/future-promise/ruby/GemFile
@@ -1,3 +1,2 @@
 source 'https://rubygems.org'
-gem 'concurrent-ruby', '~> 1.0', '>= 1.0.5'
-gem 'thread'
+gem 'concurrent-ruby', require: 'concurrent'
