Updated Lockless package.json with correct information

--- a/async/lockless/typescript/package.json
+++ b/async/lockless/typescript/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "future-promise-exmple",
+  "name": "lockless-exmple",
   "version": "1.0.0",
-  "description": "Example of using async and await ",
+  "description": "Example of using lockless aysnc",
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts",
